Bug 968315 - [markup view] Current / hovered node highlighting colors need to be higher contrast;r=jwalker
UltraBlame original commit: 36bebb7bf48992f5ed2022c184f72c247507351d

--- a/browser/themes/shared/devtools/markup-view.css
+++ b/browser/themes/shared/devtools/markup-view.css
@@ -14,3 +14,22 @@
 .styleinspector-propertyeditor {
   border: 1px solid #CCC;
 }
+
+
+
+
+
+.theme-selected ~ .editor,
+.theme-selected ~ .editor .theme-fg-color1,
+.theme-selected ~ .editor .theme-fg-color2,
+.theme-selected ~ .editor .theme-fg-color3,
+.theme-selected ~ .editor .theme-fg-color4,
+.theme-selected ~ .editor .theme-fg-color5,
+.theme-selected ~ .editor .theme-fg-color6,
+.theme-selected ~ .editor .theme-fg-color7 {
+  color: #f5f7fa; 
+}
+
+.tag-line {
+  padding-left: 2px;
+}
